section-2/network.yml
Parameters:
  EnviroName:
    Description: This is the name of the current environment
    Type: String

  VpcCIDR:
    Description: Please enter the VPC IP range (CIDR notation)
    Type: String
    Default: 10.0.0.0/16
  
  PublicSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation)
    Type: String
    Default: 10.0.0.0/24

  PublicSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation)
    Type: String
    Default: 10.0.1.0/24
      
      
  PrivateSubnet1CIDR:
    Description: Please enter the IP range (CIDR notation)
    Type: String
    Default: 10.0.2.0/24
      
  PrivateSubnet2CIDR:
    Description: Please enter the IP range (CIDR notation)
    Type: String
    Default: 10.0.3.0/24

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: !Ref EnviroName

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnviroName
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet1CIDR
      Tags:
        - Key: Name
          Value: !Ref EnviroName

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [0, !GetAZs '']
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnviroName} private subnet (AZ1)

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId: !Ref VPC
      CidrBlock: !Ref PublicSubnet2CIDR
      Tags:
        - Key: Name
          Value: !Ref EnviroName

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [1, !GetAZs '']
      VpcId: !Ref VPC
      CidrBlock: !Ref PrivateSubnet2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnviroName} private subnet (AZ2)

  NatGateway1:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP1.AllocationId
      SubnetId: !Ref PublicSubnet1
      Tags:
       - Key: Name
         Value: !Ref EnviroName

  NatGateway2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEIP2.AllocationId
      SubnetId: !Ref PublicSubnet2
      Tags:
      - Key: Name
        Value: !Ref EnviroName

  NatGatewayEIP1:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NatGatewayEIP2:
    Type: AWS::EC2::EIP
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnviroName} Public Routes

  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnviroName} Private Routes AZ1

  DefaultPrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway1

  PrivateSubnet1RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet1
      RouteTableId: !Ref PrivateRouteTable1

  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub ${EnviroName} Private Routes AZ2

  DefaultPrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway2

  PrivateSubnet2RouteTableAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable2

Outputs:
  
  VPC:
    Description: Reference to the created vpc
    Value: !Ref VPC
    Export: 
      Name: !Sub ${EnviroName}-VPCID

  VPCPublicRouteTable:
    Description: Reference to the Public route table
    Value: !Ref PublicRouteTable
    Export: 
      Name: !Sub ${EnviroName}-PUB-RT

  VpcPrivateRouteTable1:
    Description: Reference to the private route table in AZ1
    Value: !Ref PrivateRouteTable1
    Export: 
      Name: !Sub ${EnviroName}-PRV1-RT
  
  VpcPrivateRouteTable2:
    Description: Reference to the private route table in AZ1
    Value: !Ref PrivateRouteTable2
    Export: 
      Name: !Sub ${EnviroName}-PRV2-RT

  PublicSubnets:
    Description: Reference to a list of public subnets
    Value: !Join ["," , [!Ref PublicSubnet1, !Ref PublicSubnet2 ]]
    Export: 
      Name: !Sub ${EnviroName}-PUB-SNETS
  
  PrivateSubnets:
    Description: Reference to a list of private subnets
    Value: !Join ["," , [!Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
    Export: 
      Name: !Sub ${EnviroName}-PRV-SNETS
    
  PublicSubnet1:
    Description: Ref to public subnet 1
    Value: !Ref PublicSubnet1
    Export: 
      Name: !Sub ${EnviroName}-PUB1-NET
    
  PublicSubnet2:
    Description: Ref to public subnet 2
    Value: !Ref PublicSubnet2
    Export: 
      Name: !Sub ${EnviroName}-PUB2-NET
    
  PrivateSubnet1:
    Description: Ref to Private subnet 1
    Value: !Ref PrivateSubnet1
    Export: 
      Name: !Sub ${EnviroName}-PRV1-NET
    
  PrivateSubnet2:
    Description: Ref to Private subnet 2
    Value: !Ref PrivateRouteTable1
    Export: 
      Name: !Sub ${EnviroName}-PRV2-NET
